--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 <body>
     <h2>CSV File Uploader</h2>
     <input type="file" id="csvFile" accept=".csv">
+    <br>
+        <button onclick="editCSV()">Edit CSV</button>
+        <br><br>
+        <button onclick="saveCSV()">Save CSV</button>
     <br><br>
     <div id="csvData" class="hidden">
         <table id="csvTable">
